[package]
name = "croissant-fastest"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.32.0-rc.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [ "json", "blocking" ]}
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[profile.release]
opt-level = 3